solve icons dark mode contrast, add email-sent page

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -194,6 +194,7 @@
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	overflow-y: hidden;
 }
 
 .contact-box p {
@@ -366,8 +367,6 @@
 @media screen and (max-width: 1000px) {
 	.left-contact-section {
 		border: none;
-	}
-	.right-contact-section {
-		margin-top: 2em;
+		margin-bottom: 2em;
 	}
 }
